--- a/3-xr.yaml
+++ b/3-xr.yaml
@@ -1,14 +1,9 @@
-apiVersion: gcp.com/v1alpha1
+apiVersion: example.com/v1alpha1
 kind: computeinstance
 metadata:
   namespace: crossplane-system
   name: test4
 spec:
-#  compositionRef:
-#    name: computeinstance
-#  compositionSelector:
-#    matchLabels:
-#      crossplane.io/xrd: xcomputeinstance.gcp.com
   parameters:
     zone: europe-west2-b
     machineType: small
