--- a/1-xrd.yaml
+++ b/1-xrd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xcomputeinstances.gcp.com
+  name: xcomputeinstances.example.com
 spec:
-  group: gcp.com
+  group: example.com
   names:
     kind: xcomputeinstance
     plural: xcomputeinstances
